--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -3,6 +3,6 @@
     "title": "Galeria de imagens",
     "select_image": "Selecionar imagem",
     "upload_image": "Subir imagem",
-    "no_imagem_selected": "Nenhuma imagem selecionada.",
+    "no_image_selected": "Nenhuma imagem selecionada.",
     "image_uploaded": "Imagem enviada com sucesso!"
 }
